--- a/Dugga 2 Gestures swipe.html
+++ b/Dugga 2 Gestures swipe.html
@@ -160,6 +160,8 @@
     </style>
 </head>
 
+    <!-- ########################################################################--------HTML body starts--------######################################################################## -->
+
 <body onload="showPage(11); init();">
   <div id="page1" class="page">
     <nav class="navbar navbar-dark bg-dark">
