--- a/Dugga 2 Gestures swipe.html
+++ b/Dugga 2 Gestures swipe.html
@@ -38,8 +38,9 @@
       #pic2{background:#def;}
       #pic3{background:#fde;}
 
-      .display-3 {
-        font-size: 5px;
+      h1.display-3 {
+        font-size: 30px;
+        margin-top: 10px;
       }
 
       .picture{position:fixed;left:100%;top:0%;width:100%;height:100%;z-index:500;}
@@ -1008,29 +1009,29 @@ FrödingAppen är ett resultat av kursen mobilapplikationsdesign och är produce
                 <div class="carousel-item active">
                   <img class="d-block w-100" src="bild5.jpg" alt="First slide"  id="page1">
                   <div class="carousel-caption d-none d-md-block">
-                    <h5><a href="bild2.png">"Gustaf Fröding 1908"</a></h5>
-                    <p><a href="https://creativecommons.org/share-your-work/public-domain/">Public domain</a></p>
+                    <h5><a href="bild2.png" style="color: #000000; font-weight: 800;">"Gustaf Fröding 1908"</a></h5>
+                    <p><a href="https://creativecommons.org/share-your-work/public-domain/" style="color: #000000; font-weight: bold;">Public domain</a></p>
                   </div>
                 </div>
                 <div class="carousel-item">
                   <img class="d-block w-100" src="bild6.jpg" alt="Second slide"  id="page2">
                   <div class="carousel-caption d-none d-md-block">
-                    <h5><a href="bild2.png">"Gustaf Fröding 1908"</a></h5>
-                    <p><a href="https://creativecommons.org/share-your-work/public-domain/">Public domain</a></p>
+                    <h5><a href="bild2.png" style="color: #000000; font-weight: 800;">"Gustaf Fröding 1908"</a></h5>
+                    <p><a href="https://creativecommons.org/share-your-work/public-domain/" style="color: #000000; font-weight: bold;">Public domain</a></p>
                   </div>
                 </div>
                 <div class="carousel-item">
                   <img class="d-block w-100" src="bild5.jpg" alt="Third slide"  id="page3">
                   <div class="carousel-caption d-none d-md-block">
-                    <h5><a href="bild2.png">"Gustaf Fröding 1908"</a></h5>
-                    <p><a href="https://creativecommons.org/share-your-work/public-domain/">Public domain</a></p>
+                    <h5><a href="bild2.png" style="color: #000000; font-weight: 800;">"Gustaf Fröding 1908"</a></h5>
+                    <p><a href="https://creativecommons.org/share-your-work/public-domain/" style="color: #000000; font-weight: bold;">Public domain</a></p>
                   </div>
                 </div>
                 <div class="carousel-item">
                   <img class="d-block w-100" src="bild6.jpg" alt="Second slide"  id="page4">
                   <div class="carousel-caption d-none d-md-block">
-                    <h5><a href="bild2.png">"Gustaf Fröding 1908"</a></h5>
-                    <p><a href="https://creativecommons.org/share-your-work/public-domain/">Public domain</a></p>
+                    <h5><a href="bild2.png" style="color: #000000; font-weight: 800;">"Gustaf Fröding 1908"</a></h5>
+                    <p><a href="https://creativecommons.org/share-your-work/public-domain/" style="color: #000000; font-weight: bold;">Public domain</a></p>
                   </div>
                 </div>
               </div>
