Changed font size of the carousel header to bigger

--- a/Dugga 2 Gestures swipe.html
+++ b/Dugga 2 Gestures swipe.html
@@ -39,7 +39,8 @@
       #pic3{background:#fde;}
 
       h1.display-3 {
-        font-size: 30px;
+        font-size: 40px;
+        font-weight: 400;
         margin-top: 10px;
       }
 
