--- a/Dugga 2 Gestures swipe.html
+++ b/Dugga 2 Gestures swipe.html
@@ -34,21 +34,22 @@
         padding:2px;
       }
 
-      #pic1{background:#fed;left:0%;}
-      #pic2{background:#def;}
-      #pic3{background:#fde;}
+      #pic1 {
+        background:#fed;
+        left:0%;
+      }
+      #pic2 {
+        background:#def;
+      }
+      #pic3 {
+        background:#fde;
+      }
 
       h1.display-3 {
         font-size: 40px;
         font-weight: 400;
         margin-top: 10px;
       }
-
-      .picture{position:fixed;left:100%;top:0%;width:100%;height:100%;z-index:500;}
-
-      .clicker{position:absolute;left:0px;width:100%;top:35%;height:30%;z-index:600;border:1px dotted orange;display:flex;justify-content:space-between;align-items:center;}
-      .leftclicker{font-size:160px;}
-      .rightclicker{font-size:160px;}
 
       @keyframes inleft {0% { left: -100%; } 100% { left: 0%;} }
       @keyframes inright {0% { left: 100%; } 100% { left: 0%;} }
