Fixed swipe function

--- a/Dugga 2 Gestures swipe.html
+++ b/Dugga 2 Gestures swipe.html
@@ -1007,7 +1007,7 @@ FrödingAppen är ett resultat av kursen mobilapplikationsdesign och är produce
               <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
               <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
             </ol>
-              <div class="carousel-inner">
+              <div id="karusell" class="carousel-inner">
                 <div class="carousel-item active">
                   <img class="d-block w-100" src="bild5.jpg" alt="First slide"  id="page1">
                   <div class="carousel-caption d-none d-md-block">
