--- a/Dugga 2 Gestures swipe.html
+++ b/Dugga 2 Gestures swipe.html
@@ -130,56 +130,52 @@
         element = document.getElementById("tooltip").style.opacity="0";
       });
       }
-      var swipepage=0;
-      function showpage(picidin,animin,picidout,animout,pic)
-      {
-          swipepage=page;
-          document.getElementById(picidin).style.animation=animin+" 1s ease-in-out 0s 1 forwards";
-          document.getElementById(picidout).style.animation=animout+" 1s ease-in-out 0s 1 forwards";
-      }
 
-      function swipe(direction)
-      {
-        if(swipepage==0){
-          if(direction==1){
-              showpage('pic2','in','pic1','out',1);
-          }else{
-              showpage('pic4','in','pic1','out',3);
-          }
-          }else if(swipepage==1){
-            if(direction==1){
-                showpage('pic3','in','pic2','out',2);
-            }else{
-                showpage('pic1','in','pic2','out',0);
+      // Swipe functionality for the "karusell"
+      var swipepage=0;
+        function showSwipePage(pageidin,animin,pageidout,animout,page)
+        {
+            swipepage=page;  
+            document.getElementById(pageidin).style.animation=animin+" 1s ease-in-out 0s 1 forwards";
+            document.getElementById(pageidout).style.animation=animout+" 1s ease-in-out 0s 1 forwards";
+        }
+    
+        function swipe(direction)
+        {
+            if(swipepage==0){
+                if(direction==1){
+                    showSwipePage('page2','inright','page1','outleft',1);
+                }else{
+                    showSwipePage('page1','outright','page3','inleft',2);    
+                }
+            }else if(swipepage==1){
+                if(direction==1){
+                    showSwipePage('page3','inright','page2','outleft',2);
+                }else{
+                    showSwipePage('page2','outright','page1','inleft',0);
+                }
+            }else if(swipepage==2){
+                if(direction==1){
+                    showSwipePage('page1','inright','page3','outleft',0);
+                }else{
+                    showSwipePage('page3','outright','page2','inleft',1);    
+                }
             }
-          }
-          else if(swipepage==2){
-            if(direction==1){
-                showpage('pic4','in','pic3','out',3);
-            }else{
-                showpage('pic2','in','pic3','out',1);
-          }
         }
-        else if(swipepage==3){
-          if(direction==1){
-              showpage('pic1','in','pic4','out',0);
-          }else{
-              showpage('pic3','in','pic4','out',2);
-          }
+ 
+        function initHammer(){
+            var element = document.getElementById("karusell");
+            var hammertime = Hammer(element);
+            hammertime.on("swiperight", function(event) { swipe(-1) });    
+            hammertime.on("swipeleft", function(event) { swipe(1) });    
         }
-      }
-      function init(){
-          var element = document.getElementById("karusell");
-          var hammertime = Hammer(element);
-          hammertime.on("swiperight", function(event) { swipe(-1); });
-          hammertime.on("swipeleft", function(event) { swipe(1); });
-      }
+
     </script>
 </head>
 
     <!-- ########################################################################--------HTML body starts--------######################################################################## -->
 
-<body onload="showPage(11); init();">
+<body onload="showPage(11); init(); initHammer();">
   <div id="page1" class="page">
     <nav class="navbar navbar-dark bg-dark">
       <a class="navbar-brand" onclick="showPage(1);">FrödingAppenTouch</a>
