Small fixes and comments addded on swipe

--- a/Dugga 2 Gestures swipe.html
+++ b/Dugga 2 Gestures swipe.html
@@ -131,7 +131,7 @@
       });
       }
 
-      // Swipe functionality for the "karusell"
+      // Swipe functionality
       var swipepage=0;
         function showSwipePage(pageidin,animin,pageidout,animout,page)
         {
