--- a/Dugga 2 Gestures swipe.html
+++ b/Dugga 2 Gestures swipe.html
@@ -34,6 +34,13 @@
       padding:2px;
     }
 
+    #karusell {
+      width: 90%;
+      align-items: center;
+      text-align: center;
+      margin: auto;
+    }
+
     h1.display-3 {
       font-size: 40px;
       font-weight: 400;
