Changed styling of 'Viktig information'

--- a/Dugga 2 Gestures swipe.html
+++ b/Dugga 2 Gestures swipe.html
@@ -34,6 +34,12 @@
       padding:2px;
     }
 
+    #importantInfo {
+      background-color: rgb(255, 38, 0);
+      border: none;
+      border-radius: 0px 0px 5px 5px;
+    }
+
     #karusell {
       width: 90%;
       align-items: center;
@@ -221,7 +227,7 @@
       <div class="row">
         <div class="col-sm">
           <!-- Button trigger modal -->
-          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+          <button type="button" id="importantInfo" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
             Viktig information!
           </button>
           <!-- Modal -->
