--- a/Dugga 2 Gestures swipe.html
+++ b/Dugga 2 Gestures swipe.html
@@ -1012,30 +1012,30 @@
               <div id="karusell" class="carousel-inner">
                 <div class="carousel-item active">
                   <img class="d-block w-100" src="bild5.jpg" alt="First slide"  id="page1">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h5><a href="bild2.png" style="color: #000000; font-weight: 800;">"Gustaf Fröding 1908"</a></h5>
-                    <p><a href="https://creativecommons.org/share-your-work/public-domain/" style="color: #000000; font-weight: bold;">Public domain</a></p>
+                  <div class="carousel-caption">
+                    <h5><a href="bild2.png" style="background: rgba(0,0,0,0.5); color: #ffffff;">"Gustaf Fröding 1908"</a></h5>
+                    <p><a href="https://creativecommons.org/share-your-work/public-domain/" style="background: rgba(0,0,0,0.5); color: #ffffff;">Public domain</a></p>
                   </div>
                 </div>
                 <div class="carousel-item">
                   <img class="d-block w-100" src="bild6.jpg" alt="Second slide"  id="page2">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h5><a href="bild2.png" style="color: #000000; font-weight: 800;">"Gustaf Fröding 1908"</a></h5>
-                    <p><a href="https://creativecommons.org/share-your-work/public-domain/" style="color: #000000; font-weight: bold;">Public domain</a></p>
+                  <div class="carousel-caption">
+                    <h5><a href="bild2.png" style="background: rgba(0,0,0,0.5); color: #ffffff;">"Gustaf Fröding 1908"</a></h5>
+                    <p><a href="https://creativecommons.org/share-your-work/public-domain/" style="background: rgba(0,0,0,0.5); color: #ffffff;">Public domain</a></p>
                   </div>
                 </div>
                 <div class="carousel-item">
                   <img class="d-block w-100" src="bild5.jpg" alt="Third slide"  id="page3">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h5><a href="bild2.png" style="color: #000000; font-weight: 800;">"Gustaf Fröding 1908"</a></h5>
-                    <p><a href="https://creativecommons.org/share-your-work/public-domain/" style="color: #000000; font-weight: bold;">Public domain</a></p>
+                  <div class="carousel-caption">
+                    <h5><a href="bild2.png" style="background: rgba(0,0,0,0.5); color: #ffffff;">"Gustaf Fröding 1908"</a></h5>
+                    <p><a href="https://creativecommons.org/share-your-work/public-domain/" style="background: rgba(0,0,0,0.5); color: #ffffff;">Public domain</a></p>
                   </div>
                 </div>
                 <div class="carousel-item">
                   <img class="d-block w-100" src="bild6.jpg" alt="Second slide"  id="page4">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h5><a href="bild2.png" style="color: #000000; font-weight: 800;">"Gustaf Fröding 1908"</a></h5>
-                    <p><a href="https://creativecommons.org/share-your-work/public-domain/" style="color: #000000; font-weight: bold;">Public domain</a></p>
+                  <div class="carousel-caption">
+                    <h5><a href="bild2.png" style="background: rgba(0,0,0,0.5); color: #ffffff;">"Gustaf Fröding 1908"</a></h5>
+                    <p><a href="https://creativecommons.org/share-your-work/public-domain/" style="background: rgba(0,0,0,0.5); color: #ffffff;">Public domain</a></p>
                   </div>
                 </div>
               </div>
